[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harpocrates-vault"
version = "2.0.0"
description = "A high-security local encrypted password manager"
readme = "README.md"
authors = [{name = "alvarofdezr"}]
requires-python = ">=3.10"
dependencies = [
    "cryptography==46.0.7",
    "argon2-cffi==25.1.0",
    "pyperclip==1.11.0",
    "colorama==0.4.6",
    "requests==2.33.0",
    "zxcvbn==4.4.28",
    "pygements==2.20.0"
]

[project.scripts]
harpocrates = "main:main"

[tool.setuptools.packages.find]
include = ["app*", "core*"]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pip-audit>=2.7.1"
]